// Copyright 2018 Samsung SDS Cloud Native Computing Team authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package trident;

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

// The greeting service definition.
service PingPoseidon {
  // Sends a greeting
  rpc HelloPoseidon (HelloPoseidonMsg) returns (PoseidonReply) {
    option (google.api.http) = {
      post : "/v1/helloposeidon"
      body: "*"
    };
  }
  // Sends another greeting
  rpc HelloPoseidonAgain (HelloPoseidonMsg) returns (PoseidonReply) {
    option (google.api.http) = {
      post : "/v1/helloposeidonagain"
      body: "*"
    };
  }
}

// The request message containing the user's name.
message HelloPoseidonMsg {
  string name = 1; // name of individual messaging poseidon
}

// The response message containing the greetings
message PoseidonReply {
  string message = 1; // reply from poseidon
}
